[gd_scene load_steps=7 format=2]

[ext_resource path="res://Shared/tileset.svg" type="Texture" id=1]
[ext_resource path="res://Entities/Entities/ChestGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Systems/GUIComponent.gd" type="Script" id=3]
[ext_resource path="res://Entities/Entities/ChestEntity.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Close"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Lid:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.349395, 0.399395 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 23, 341, 38, 53 ), Rect2( 134, 341, 44, 51 ), Rect2( 244, 344, 52, 47 ), Rect2( 354, 348, 60, 43 ), Rect2( 464, 353, 65, 38 ), Rect2( 575, 360, 68, 31 ), Rect2( 686, 368, 69, 29 ), Rect2( 797, 369, 67, 29 ), Rect2( 909, 369, 62, 37 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lid:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -18, -42 ), Vector2( -13.5, -43 ), Vector2( -10, -41.7 ), Vector2( -6.3, -39.8 ), Vector2( -3.6, -37 ), Vector2( 0, -34 ), Vector2( 0, -27 ), Vector2( 0, -26.6 ), Vector2( 0, -17.595 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Lid:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 909, 369, 62, 37 ), Rect2( 797, 369, 67, 29 ), Rect2( 686, 368, 69, 29 ), Rect2( 575, 360, 68, 31 ), Rect2( 464, 353, 65, 38 ), Rect2( 354, 348, 60, 43 ), Rect2( 244, 344, 52, 47 ), Rect2( 134, 341, 44, 51 ), Rect2( 23, 341, 38, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lid:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -17.595 ), Vector2( 0, -26.6 ), Vector2( 0, -27 ), Vector2( 0, -34 ), Vector2( -3.6, -37 ), Vector2( -6.3, -39.8 ), Vector2( -10, -41.7 ), Vector2( -13.5, -43 ), Vector2( -18, -42 ) ]
}

[node name="ChestEntity" type="StaticBody2D" groups=[
"gui_entities",
]]
script = ExtResource( 4 )

[node name="GUIComponent" type="Node" parent="."]
script = ExtResource( 3 )
GuiWindow = ExtResource( 2 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( 0, -8.018 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 29, 229, 62, 52 )

[node name="Lid" type="Sprite" parent="."]
position = Vector2( 0, -17.595 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 909, 369, 62, 37 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 1 )
anims/Open = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 30.4195, -10.5373, 30.577, -2.82028, -0.133545, 12.9287, -30.3717, -2.66279, -30.3717, -8.9624, 0.181435, -22.664 )
[connection signal="gui_closed" from="GUIComponent" to="." method="_on_GUIComponent_gui_closed"]
[connection signal="gui_opened" from="GUIComponent" to="." method="_on_GUIComponent_gui_opened"]
